# Isoflash

./: Cargo.toml  README.md  catalog.json
src/: main.rs  resolver.rs
src/i18n/: en.json  es.json  zh.json
src/ventoy-1.1.12/: log.txt
src/ventoy-1.1.12/tool/x86_64/: log.txt
website/: index.html
