[package]
name = "isoflash"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.27"
eframe = "0.27"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-rust = "4"
