[package]
name = "isoflash"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe        = "0.27"
egui          = "0.27"
egui_extras   = { version = "0.27", features = ["default", "image"] }
image         = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde_json    = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
